@@ -35,6 +35,7 @@ import javax.swing.*;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -120,7 +121,7 @@ public class Boot
                     setState("Bytecode Viewer Boot Screen - Downloading " + fileName + "...");
                     System.out.println("Downloading " + fileName);
 
-                    try (InputStream is = new URL("https://github.com/Konloch/bytecode-viewer/raw/master/libs/" + fileName).openConnection().getInputStream();
+                    try (InputStream is = URI.create("https://github.com/Konloch/bytecode-viewer/raw/master/libs/" + fileName).toURL().openConnection().getInputStream();
                          FileOutputStream fos = new FileOutputStream(file))
                     {
                         System.out.println("Downloading from " + s);
@@ -295,7 +296,7 @@ public class Boot
 
     public static void populateUrlList() throws Exception
     {
-        HTTPRequest req = new HTTPRequest(new URL("https://github.com/Konloch/bytecode-viewer/tree/master/libs"));
+        HTTPRequest req = new HTTPRequest(URI.create("https://github.com/Konloch/bytecode-viewer/tree/master/libs").toURL());
         for (String s : req.read())
             if (s.contains("href=\"/Konloch/bytecode-viewer/blob/master/libs/"))
             {
@@ -406,7 +407,7 @@ public class Boot
                     setState("Bytecode Viewer Boot Screen - Downloading " + fileName + "...");
                     System.out.println("Downloading " + fileName);
 
-                    try (InputStream is = new URL("https://github.com/Konloch/bytecode-viewer/raw/master/libs/" + fileName).openConnection().getInputStream();
+                    try (InputStream is = URI.create("https://github.com/Konloch/bytecode-viewer/raw/master/libs/" + fileName).toURL().openConnection().getInputStream();
                          FileOutputStream fos = new FileOutputStream(file))
                     {
                         System.out.println("Downloading from " + s);
